refactor: fix some findings